apps/headscale/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: headscale
