apps/headscale/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headscale
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - vpn.ncraig.dev
      secretName: vpn-ncraig-dev-cert
  rules:
    - host: vpn.ncraig.dev
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: headscale
                port:
                  name: http
